--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
 body{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     width: 100%;
     height: 100vh;
@@ -40,7 +41,7 @@ body{
 
 h1{
     font-size: 6rem;
-    margin: 2rem 0;
+    margin: 1rem 0;
 }
 
 form{
@@ -48,7 +49,7 @@ form{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: 1.6rem;
     padding: 2rem;
 }
 
